--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ header {
 #results {
     margin-left: 0;
 }
+.word-definition {padding-left: 25px;}
 
 @media only screen and (min-width: 550px) {
     #unicron { display: block; }
